--- a/csi.cbp
+++ b/csi.cbp
@@ -42,6 +42,7 @@
 		<Unit filename="command.h" />
 		<Unit filename="console.cpp" />
 		<Unit filename="console.h" />
+		<Unit filename="csi.cpp" />
 		<Unit filename="cube.h" />
 		<Unit filename="main.cpp" />
 		<Unit filename="stream.cpp" />
